--- a/projects/projects.json
+++ b/projects/projects.json
@@ -11,7 +11,7 @@
   {
     "name": "Ganga Kalyana Application",
     "desc": "A government initiative designed to provide borewells to economically disadvantaged members of the Backward Class community. ",
-    "image": "GangaKalyan",
+    "image": "GangaKalyan.png",
     "category": ".net",
     "links": {
       "view": "https://gangakalyanabcwd.karnataka.gov.in"
