--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "Supplier Diversity Management System (SDMS)",
+    "name": "SDMS",
     "desc": "This project was developed using .NET Core, C#, HTML5, CSS3, jQuery, Bootstrap, and MS SQL.",
     "image": "DMS",
     "category": ".net",
